# tap-mjjwordpressrest

./: .gitignore  README.md  config-sample.json  meltano.yml  pyproject.toml  tap-mjjwordpressrest.sh  tox.ini
tap_mjjwordpressrest/: client.py  streams.py  tap.py
tap_mjjwordpressrest/schemas/: comments.json  configschema.json  posts.json  users.json
tap_mjjwordpressrest/tests/: __init__.py  test_core.py
