[tool.poetry]
name = "tap-mjjwordpressrest"
version = "0.0.1"
description = "`tap-mjjwordpressrest` is a Singer tap for MJJWordPressREST, built with the Meltano SDK for Singer Taps."
authors = ["JJ Jay"]
keywords = [
    "ELT",
    "MJJWordPressREST",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.10,>=3.6.2"
requests = "^2.25.1"
singer-sdk = "^0.3.12"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
tox = "^3.24.4"
flake8 = "^3.9.2"
black = "^21.9b0"
pydocstyle = "^6.1.1"
mypy = "^0.910"
types-requests = "^2.25.8"
debugpy = "^1.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-mjjwordpressrest = 'tap_mjjwordpressrest.tap:TapMJJWordPressREST.cli'
